chore: update request format for auth routes and fix problem with cors
