# generate/openapi.json
@@ -216,6 +216,48 @@
         }
       }
     },
+    "/auth/logout": {
+      "post": {
+        "operationId": "AuthSpec_post_/logout",
+        "tags": [
+          "auth"
+        ],
+        "summary": "Logout",
+        "description": "Logout from the application",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "enum": [
+                        true
+                      ]
+                    },
+                    "message": {
+                      "type": "string",
+                      "enum": [
+                        "Logged out successfully"
+                      ]
+                    }
+                  },
+                  "additionalProperties": false,
+                  "required": [
+                    "message",
+                    "success"
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/cart/add": {
       "post": {
         "operationId": "CartSpec_post_/add",
@@ -964,6 +1006,26 @@
       "RefreshTokenResponse": {
         "type": "object",
         "properties": {
+          "user": {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "number"
+              },
+              "email": {
+                "type": "string"
+              },
+              "userType": {
+                "$ref": "#/components/schemas/_Enums.UserType"
+              }
+            },
+            "additionalProperties": false,
+            "required": [
+              "email",
+              "id",
+              "userType"
+            ]
+          },
           "accessToken": {
             "type": "string"
           },
@@ -973,7 +1035,18 @@
         },
         "additionalProperties": false
       },
+      "_Enums.UserType": {
+        "enum": [
+          "BUYER",
+          "SELLER"
+        ],
+        "type": "string"
+      },
       "RefreshTokenHandler": {
+        "type": "object",
+        "additionalProperties": false
+      },
+      "import___home_omarjr_courses_depi_react_developer_track_final_project_handie_backend_src_controllers_auth.controller___assert___resolution-mode___import____.LogoutHandler": {
         "type": "object",
         "additionalProperties": false
       },
